changed styles path

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/desktop.css" />
     <link rel="stylesheet" href="styles/average.css" />
     <link rel="stylesheet" href="styles/mobile.css" />
-    <link rel="stylesheet" href="/styles/mobile-shorter.css">
+    <link rel="stylesheet" href="styles/mobile-shorter.css" />
     <title>The unique taste</title>
   </head>
   <body>
@@ -1205,8 +1205,9 @@
       <div class="container">
         <h2 class="about-author__header">Об Авторе</h2>
         <h3 class="about-author__subheader">
-          Создатель авторского проекта The unique taste <span class="desktop">&#160;</span>Ирина Соминская и
-          диетолог - нутрициолог Алена Плетнева
+          Создатель авторского проекта The unique taste
+          <span class="desktop">&#160;</span>Ирина Соминская и диетолог -
+          нутрициолог Алена Плетнева
         </h3>
         <div class="about-author__block">
           <img
@@ -1243,8 +1244,8 @@
           <div class="about-author__picture about-author__picture_first">
             <img
               srcset="
-                media/img/author-pic1-mobile.png  485w,
-                media/img/author-pic1-average.png 768w,
+                media/img/author-pic1-mobile.png   485w,
+                media/img/author-pic1-average.png  768w,
                 media/img/author-picture1.png     1254w
               "
               sizes="(max-width: 375px) 485px, (max-width: 768px) 768px, 1254px"
