fixed images sizes

--- a/index.html
+++ b/index.html
@@ -361,31 +361,35 @@
         </div>
         <div class="main__picture">
           <img
-            srcset="
-              media/img/woman-background-mob.png 375w,
-              media/img/woman-background.png     671w
-            "
-            sizes="(max-width: 375px) 375px, 671px"
+            src="media/img/woman-background-mob.png"
+            alt="woman-background"
+            class="main__picture-background mobile"
+          />
+          <img
             src="media/img/woman-background.png"
             alt="woman-background"
-            class="main__picture-background"
+            class="main__picture-background average"
           />
-          <picture>
-            <source srcset="media/img/woman-mobile.png  208w,
-            media/img/woman-average.png 328w,
-            media/img/woman.png         671w" sizes="(max-width: 375px) 208px, (max-width: 768px) 328px, 671px">
-            <img
-            srcset="
-              media/img/woman-mobile.png  208w,
-              media/img/woman-average.png 328w,
-              media/img/woman.png         671w
-            "
-            sizes="(max-width: 375px) 208px, (max-width: 768px) 328px, 671px"
+          <img
+            src="media/img/woman-background.png"
+            alt="woman-background"
+            class="main__picture-background desktop"
+          />
+          <img
+            src="media/img/woman-mobile.png"
+            alt="woman"
+            class="main__picture-image mobile"
+          />
+          <img
+            src="media/img/woman-average.png"
+            alt="woman"
+            class="main__picture-image average"
+          />
+          <img
             src="media/img/woman.png"
             alt="woman"
-            class="main__picture-image"
+            class="main__picture-image desktop"
           />
-          </picture>
         </div>
         <div class="main__button-container">
           <div class="button-shadow"></div>
@@ -665,14 +669,19 @@
         <div class="mission__cards">
           <div class="mission__card card-item">
             <img
-              srcset="
-                media/img/card1-bg-woman1-average.png 344w,
-                media/img/card1-bg-woman1.png         439w
-              "
-              sizes="(max-width: 768px) 344px, 439px"
+              src="media/img/card1-bg-woman1-average.png"
+              alt="woman"
+              class="card-item__img mobile"
+            />
+            <img
+              src="media/img/card1-bg-woman1-average.png"
+              alt="woman"
+              class="card-item__img average"
+            />
+            <img
               src="media/img/card1-bg-woman1.png"
               alt="woman"
-              class="card-item__img"
+              class="card-item__img desktop"
             />
             <div class="card-item__block card-item_num-first">
               <div class="card-shadow"></div>
@@ -692,14 +701,19 @@
           </div>
           <div class="mission__card card-item">
             <img
-              srcset="
-                media/img/card2-bg-woman2-average.png 344w,
-                media/img/card2-bg-woman2.png         439w
-              "
-              sizes="(max-width: 768px) 344px, 439px"
+              src="media/img/card2-bg-woman2-average.png"
+              alt="woman"
+              class="card-item__img mobile"
+            />
+            <img
+              src="media/img/card2-bg-woman2-average.png"
+              alt="woman"
+              class="card-item__img average"
+            />
+            <img
               src="media/img/card2-bg-woman2.png"
               alt="woman"
-              class="card-item__img"
+              class="card-item__img desktop"
             />
             <div class="card-item__block card-item_num-second">
               <div class="card-shadow"></div>
@@ -721,14 +735,19 @@
           </div>
           <div class="mission__card card-item">
             <img
-              srcset="
-                media/img/card3-bg-woman3-average.png 344w,
-                media/img/card3-bg-woman3.png         439w
-              "
-              sizes="(max-width: 768px) 344px, 439px"
+              src="media/img/card3-bg-woman3-average.png"
+              alt="woman"
+              class="card-item__img mobile"
+            />
+            <img
+              src="media/img/card3-bg-woman3-average.png"
+              alt="woman"
+              class="card-item__img average"
+            />
+            <img
               src="media/img/card3-bg-woman3.png"
               alt="woman"
-              class="card-item__img"
+              class="card-item__img desktop"
             />
             <div class="card-item__block card-item_num-third">
               <div class="card-shadow"></div>
@@ -747,14 +766,19 @@
           </div>
           <div class="mission__card card-item">
             <img
-              srcset="
-                media/img/card4-bg-woman4-average.png 344w,
-                media/img/card4-bg-woman4.png         439w
-              "
-              sizes="(max-width: 768px) 344px, 439px"
+              src="media/img/card4-bg-woman4-average.png"
+              alt="woman"
+              class="card-item__img mobile"
+            />
+            <img
+              src="media/img/card4-bg-woman4-average.png"
+              alt="woman"
+              class="card-item__img average"
+            />
+            <img
               src="media/img/card4-bg-woman4.png"
               alt="woman"
-              class="card-item__img"
+              class="card-item__img desktop"
             />
             <div class="card-item__block card-item_num-fourth">
               <div class="card-shadow"></div>
@@ -776,14 +800,19 @@
           </div>
           <div class="mission__card card-item">
             <img
-              srcset="
-                media/img/card5-bg-woman5-average.png 344w,
-                media/img/card5-bg-woman5.png         439w
-              "
-              sizes="(max-width: 768px) 344px, 439px"
+              src="media/img/card5-bg-woman5-average.png"
+              alt="woman"
+              class="card-item__img mobile"
+            />
+            <img
+              src="media/img/card5-bg-woman5-average.png"
+              alt="woman"
+              class="card-item__img average"
+            />
+            <img
               src="media/img/card5-bg-woman5.png"
               alt="woman"
-              class="card-item__img"
+              class="card-item__img desktop"
             />
             <div class="card-item__block card-item_num-fifth">
               <div class="card-shadow"></div>
@@ -801,14 +830,19 @@
           </div>
           <div class="mission__card card-item">
             <img
-              srcset="
-                media/img/card6-bg-woman6-average.png 344w,
-                media/img/card6-bg-woman6.png         439w
-              "
-              sizes="(max-width: 768px) 344px, 439px"
+              src="media/img/card6-bg-woman6-average.png"
+              alt="woman"
+              class="card-item__img mobile"
+            />
+            <img
+              src="media/img/card6-bg-woman6-average.png"
+              alt="woman"
+              class="card-item__img average"
+            />
+            <img
               src="media/img/card6-bg-woman6.png"
               alt="woman"
-              class="card-item__img"
+              class="card-item__img desktop"
             />
             <div class="card-item__block card-item_num-sixth">
               <div class="card-shadow"></div>
@@ -838,26 +872,21 @@
                 <div class="about-project__eclipse"></div>
               </div>
             </div>
-            <picture>
-              <source srcset="
-              media/img/about-project-statue-mobile.png  310w,
-              media/img/about-project-statue-average.png 361w,
-              media/img/about-project-statue.png         459w
-            "
-            sizes="(max-width: 375px) 310px, (max-width: 768px) 361px, (min-width: 769px) 459px, 459px"
-            >
-              <img
-              srcset="
-                media/img/about-project-statue-mobile.png  310w,
-                media/img/about-project-statue-average.png 361w,
-                media/img/about-project-statue.png         459w
-              "
-              sizes="(max-width: 375px) 310px, (max-width: 768px) 361px, (min-width: 769px) 459px, 459px"
+            <img
+              src="media/img/about-project-statue-mobile.png"
+              alt="statue"
+              class="about-project__statue-img mobile"
+            />
+            <img
+              src="media/img/about-project-statue-average.png"
+              alt="statue"
+              class="about-project__statue-img average"
+            />
+            <img
               src="media/img/about-project-statue.png"
               alt="statue"
-              class="about-project__statue-img"
-            /></picture>
-            
+              class="about-project__statue-img desktop"
+            />
           </div>
           <div class="about-project__block">
             <h2 class="about-project__header">О проекте</h2>
@@ -1200,27 +1229,21 @@
         </div>
         <div class="mobile-app__picture">
           <div class="mobile-app__shadow"></div>
-          <picture>
-            <source srcset="
-            media/img/mob-mobile.png   683w,
-            media/img/mob-average.png  505w,
-            media/img/mob.png         1095w
-          "
-          sizes="(max-width: 375px) 683px, (max-width: 768px) 505px, 1095px"
-          >
           <img
-            srcset="
-              media/img/mob-mobile.png   683w,
-              media/img/mob-average.png  505w,
-              media/img/mob.png         1095w
-            "
-            sizes="(max-width: 375px) 683px, (max-width: 768px) 505px, 1095px"
+            src="media/img/mob-mobile.png"
+            alt="mobile-phones"
+            class="mobile-app__mobile-img mobile"
+          />
+          <img
+            src="media/img/mob-average.png"
+            alt="mobile-phones"
+            class="mobile-app__mobile-img average"
+          />
+          <img
             src="media/img/mob.png"
             alt="mobile-phones"
-            class="mobile-app__mobile-img"
+            class="mobile-app__mobile-img desktop"
           />
-          </picture>
-          
         </div>
       </div>
     </section>
@@ -1235,15 +1258,19 @@
         </h3>
         <div class="about-author__block">
           <img
-            srcset="
-              media/img/author-noun-grape-mobile.svg  265w,
-              media/img/author-noun-grape-average.svg 346w,
-              media/img/author-noun-grape.svg         558w
-            "
-            sizes="(max-width: 375px) 265px, (max-width: 768px) 346px, 558px"
+            src="media/img/author-noun-grape-mobile.svg"
+            alt="grape"
+            class="about-author__background-img about-author__bg-first mobile"
+          />
+          <img
+            src="media/img/author-noun-grape-average.svg"
+            alt="grape"
+            class="about-author__background-img about-author__bg-first average"
+          />
+          <img
             src="media/img/author-noun-grape.svg"
             alt="grape"
-            class="about-author__background-img about-author__bg-first"
+            class="about-author__background-img about-author__bg-first desktop"
           />
           <h4 class="about-author__author">Ирина Соминская</h4>
           <p class="about-author__text">
@@ -1267,15 +1294,19 @@
           </p>
           <div class="about-author__picture about-author__picture_first">
             <img
-              srcset="
-                media/img/author-pic1-mobile.png   485w,
-                media/img/author-pic1-average.png  768w,
-                media/img/author-picture1.png     1254w
-              "
-              sizes="(max-width: 375px) 485px, (max-width: 768px) 768px, 1254px"
+              src="media/img/author-pic1-mobile.png"
+              alt="picture-in-frame"
+              class="about-author__frame-image mobile"
+            />
+            <img
+              src="media/img/author-pic1-average.png"
+              alt="picture-in-frame"
+              class="about-author__frame-image average"
+            />
+            <img
               src="media/img/author-picture1.png"
               alt="picture-in-frame"
-              class="about-author__frame-image"
+              class="about-author__frame-image desktop"
             />
             <div class="about-author__picture_upper-layer">
               <div class="about-author__picture-shadow"></div>
@@ -1294,15 +1325,19 @@
         <div class="about-author__block">
           <div class="about-author__picture about-author__picture_second">
             <img
-              srcset="
-                media/img/author-pic2-mobile.png  639w,
-                media/img/author-pic2-average.png 768w,
-                media/img/author-picture2.png     933w
-              "
-              sizes="(max-width: 375px) 639px, (max-width: 768px) 768px, 933px"
+              src="media/img/author-pic2-mobile.png"
+              alt="picture-in-frame"
+              class="about-author__frame-image mobile"
+            />
+            <img
+              src="media/img/author-pic2-average.png"
+              alt="picture-in-frame"
+              class="about-author__frame-image average"
+            />
+            <img
               src="media/img/author-picture2.png"
               alt="picture-in-frame"
-              class="about-author__frame-image"
+              class="about-author__frame-image desktop"
             />
             <div class="about-author__picture_upper-layer">
               <div class="about-author__picture-shadow"></div>
@@ -1335,15 +1370,19 @@
             непереносимостью, сопровождение пациента.
           </p>
           <img
-            srcset="
-              media/img/author-noun-banana-mobile.svg  196w,
-              media/img/author-noun-banana-average.svg 302w,
-              media/img/author-noun-banana.svg         469w
-            "
-            sizes="(max-width: 375px) 196px, (max-width: 768px) 302px, 469px"
+            src="media/img/author-noun-banana-mobile.svg"
+            alt="banana"
+            class="about-author__background-img about-author__bg-second mobile"
+          />
+          <img
+            src="media/img/author-noun-banana-average.svg"
+            alt="banana"
+            class="about-author__background-img about-author__bg-second average"
+          />
+          <img
             src="media/img/author-noun-banana.svg"
             alt="banana"
-            class="about-author__background-img about-author__bg-second"
+            class="about-author__background-img about-author__bg-second desktop"
           />
         </div>
       </div>
